# quanttide-laboratory-of-data-engineering

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  STATUS.md
blueprints/: default.cue
experiments/sec-credit/: README.md  classifier.py  llm_classify.py  parse_exhibit.py  run.sh
experiments/sec-credit/samples/: centerpoint_extension.json  enviri_amendment.json  ford_indenture.json  goodyear_amendment.json  oge_letter.json
pipelines/: default.cue
src/: dropbox.rs  main.rs
work/demo/: processed.csv  raw.csv  share-link.txt
