[package]
name = "quanttide-laboratory"
version = "0.1.0"
edition = "2024"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
description = "QuantTide Laboratory of Data Engineering"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
